@@ -200,6 +200,18 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>19</source>
+					<target>19</target>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+
 
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
@@ -224,6 +236,9 @@
 					<container>
 						<mainClass>com.nullchefo.mailservice.MailProcessServiceApplication</mainClass>
 						<user>nobody: nogroup</user>
+						<jvmFlags>
+							<jvmFlag>--enable-preview</jvmFlag>
+						</jvmFlags>
 					</container>
 				</configuration>
 			</plugin>
